k8s-manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banking-ingress
  namespace: banking
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx
  rules:
    - host: bank.abhinay123.online
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-svc
              port:
                number: 80

    - host: api.bank.abhinay123.online
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: backend-svc
              port:
                number: 8080
